# open5gs

configs/: sample.yaml.in
configs/open5gs/: amf.yaml.in  ausf.yaml.in  bsf.yaml.in  nrf.yaml.in  nssf.yaml.in  pcf.yaml.in  scp.yaml.in  smf.yaml.in  udm.yaml.in  udr.yaml.in
configs/open5gs/tls/: af.crt  af.csr  af.key  amf.crt  amf.csr  amf.key  ausf.crt  ausf.csr  ausf.key  bsf.crt  bsf.csr  bsf.key  ca.crt  ca.key  hss.crt  hss.csr  hss.key  meson.build  mme.crt  mme.csr  mme.key  nrf.crt  nrf.csr  nrf.key  nssf.crt  nssf.csr  nssf.key  pcf.crt  pcf.csr  pcf.key  pcrf.crt  pcrf.csr  pcrf.key  scp.crt  scp.csr  scp.key  smf.crt  smf.csr  smf.key  udm.crt  (+5 more)
docs/_docs/guide/: 01-quickstart.md
lib/sbi/: client.c  client.h  context.c  conv.c  meson.build  nghttp2-server.c  path.c  server.h
misc/: make-certs.sh
misc/ssl/: ssl.sh
src/amf/: namf-handler.c  nnssf-handler.c
src/nrf/: nnrf-handler.c
src/pcf/: npcf-handler.c
src/scp/: sbi-path.c
src/smf/: nsmf-handler.c
